<resources>
    <string name="app_name">Coffee Ordering</string>
    <string name="quantity">quantity</string>
    <string name="Quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="price">Price</string>
    <string name="u20b9100">₹100</string>
    <string name="total_price">Total Price</string>
    <string name="order">ORDER</string>
    <string name="coffee_price">Coffee Price</string>
    <string name="name1">Name :</string>
    <string name="email">Email</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="e_mail1">E-mail : </string>
    <string name="wheep_cream">Wheep Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="u20b920">u20b920</string>
    <string name="u20b910">₹10</string>
    <string name="u20b9201">₹20</string>
    <string name="name">Name</string>
    <string name="view_order_summary">View Order Summary</string>

</resources>